@@ -105,8 +105,8 @@
       L963, 44:R#.34   @腿长和车架上管计算公式 腿长*0.65=上管cm，例子 75*0.65=48.75cm
       L972, 45:R#.35   @svn E155037 以前的操作没有完成
       L980, 46:R#.36   @matrix 操作
-     Zndex_E : //z 2015-10-08 18:01:46 L.84 '21494 T1717078867.K ~910 +----+----+----+----+----+
-     TimeCnt : //z 2015-10-08 17:56:56 L.84 '21784 T431720221 .K ~49  +----+----+----+----+----+
+     Zndex_E : //z 2015-10-09 12:48:04 L.83 '40316 T2631002131.K ~913 +----+----+----+----+----+
+     TimeCnt : //z 2015-10-09 12:47:54 L.83 '40326 T2630966359.K ~50  +----+----+----+----+----+
      Reg.Cnt : //z 2015-10-08 17:41:19 L.84 '22721 T430354486 .K ~36  +----+----+----+----+----+
      #36  R+ : //z 2015-10-08 17:41:19 L.84 '22721 T430354486 .K ~36    V+.920  L+.972  
      #35  R+ : //z 2015-10-08 11:36:09 L.84 '44631 T1270474995.K ~35    V+.905  L+.961  
@@ -148,7 +148,7 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-10-08 18:01:46 L.84 '21494 T1717078867.K ~946   R+.16   L+.475  --+----+
+     Version : //z 2015-10-09 12:48:04 L.83 '40316 T2631002131.K ~949   R+.36   L+.1003 --+----+
      #49  V+ : //z 2015-10-08 17:56:56 L.84 '21784 T431720221 .K ~931   R+.16   L+.469  
      #48  R+ : //z 2015-10-08 17:41:19 L.84 '22721 T430354486 .K ~920   R+.36   L+.973  V+.920  
      #48  V+ : //z 2015-10-08 11:40:33 L.84 '44367 T1271445387.K ~912   R+.35   L+.961  
@@ -998,4 +998,7 @@ http://www.gamedev.net/topic/543123-invert-one-axis-in-rotation-matrix/
 
 三維空間的旋轉矩陣
 https://ccjou.wordpress.com/2014/04/29/%E4%B8%89%E7%B6%AD%E7%A9%BA%E9%96%93%E7%9A%84%E6%97%8B%E8%BD%89%E7%9F%A9%E9%99%A3/
+
+//z 2015-10-09 12:47:54 L.83 '40326 T2630966359.K[T50,L1002,R36,V948]
+vb 写的与dx8 相关的东西
 #endregion //z 2015-10-08 17:41:19 L.84 '22721 BG57IV3@XCL T430354486 .K.F4146951713-+----+----+
